src/tests/snapshots/niri__tests__window_opening__check_target_size@ofT-dhF500-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault window height: F500\nborder on\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 0 × 500, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
